--- a/index.html
+++ b/index.html
@@ -1,118 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Earn with CashVib - Start Now!</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(135deg, #1e3c72, #2a5298);
-      color: #f0f0f0;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      min-height: 100vh;
-      padding: 20px;
-      box-sizing: border-box;
-    }
-    header {
-      margin-bottom: 20px;
-      width: 100%;
-      max-width: 600px;
-      cursor: pointer;
-      border-radius: 15px;
-      overflow: hidden;
-      box-shadow: 0 10px 20px rgba(0,0,0,0.4);
-      transition: transform 0.3s ease;
-    }
-    header:hover {
-      transform: scale(1.03);
-    }
-    header img {
-      width: 100%;
-      display: block;
-    }
-    main {
-      background: rgba(255, 255, 255, 0.1);
-      padding: 25px 30px;
-      border-radius: 15px;
-      max-width: 600px;
-      box-shadow: 0 8px 16px rgba(0,0,0,0.3);
-      text-align: center;
-    }
-    main h1 {
-      margin-top: 0;
-      font-size: 1.8rem;
-      margin-bottom: 15px;
-      color: #fff;
-      text-shadow: 0 2px 6px rgba(0,0,0,0.7);
-    }
-    main p {
-      font-size: 1.1rem;
-      line-height: 1.6;
-      margin-bottom: 15px;
-      color: #ddd;
-    }
-    main p strong {
-      color: #ffd700;
-    }
-    .btn {
-      display: inline-block;
-      padding: 15px 40px;
-      font-size: 1.2rem;
-      font-weight: 700;
-      color: #1e3c72;
-      background: #ffd700;
-      border-radius: 50px;
-      text-decoration: none;
-      box-shadow: 0 5px 15px rgba(255, 215, 0, 0.6);
-      transition: background 0.3s ease, transform 0.3s ease;
-      cursor: pointer;
-      user-select: none;
-      margin-top: 15px;
-    }
-    .btn:hover {
-      background: #ffec70;
-      transform: scale(1.05);
-    }
-    @media (max-width: 640px) {
-      body, main, header {
-        width: 90%;
-        padding: 0;
-      }
-      main p {
-        font-size: 1rem;
-      }
-      .btn {
-        padding: 12px 30px;
-        font-size: 1rem;
-      }
-    }
-  </style>
-</head>
-<body>
-
-  <!-- عکس لینک‌دار به سایت خودت -->
-  <header onclick="window.location.href='https://B2n.ir/fh7012'">
-    <img src="https://i.ibb.co/JwCk5tgR/conclusion-of-the-contract-3100579-1280.jpg" alt="Earn with CashVib" />
-  </header>
-
-  <!-- متن تبلیغاتی حرفه‌ای -->
-  <main>
-    <h1>Earn Real Money with CashVib Today!</h1>
-    <p><strong>CashVib</strong> is your gateway to easy and reliable online income, offering the best referral programs.</p>
-    <p>Start earning by sharing your unique referral link and watch your passive income grow.</p>
-    <p>Fast payouts, user-friendly platform, and thousands of satisfied users worldwide.</p>
-    <p>Join the CashVib community now and turn your time into cash with no hassle!</p>
-    <p><strong>Your success starts with a single click.</strong></p>
-
-    <!-- دکمه هدایت به لینک رفرال -->
-    <a href="https://B2n.ir/pp6810" target="_blank" class="btn" rel="noopener noreferrer">
-      Join CashVib Now!
-    </a>
-  </main>
-
-</body>
-</html>
+<div style="position: relative; width: 100%; height: 0; padding-top: 150.0000%;
+ padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
+ border-radius: 8px; will-change: transform;">
+  <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+    src="https://www.canva.com/design/DAGvq00O20E/X8WishX8RdpxZeCXfL_wvQ/watch?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
+  </iframe>
+</div>
+<a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGvq00O20E&#x2F;X8WishX8RdpxZeCXfL_wvQ&#x2F;watch?utm_content=DAGvq00O20E&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">Unlock Your Easiest Path to Real Online Income with CashVib</a> توسط World News
