--- a/index.html
+++ b/index.html
@@ -1,8 +1,57 @@
-<div style="position: relative; width: 100%; height: 0; padding-top: 150.0000%;
- padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
- border-radius: 8px; will-change: transform;">
-  <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
-    src="https://www.canva.com/design/DAGvq00O20E/X8WishX8RdpxZeCXfL_wvQ/watch?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
-  </iframe>
-</div>
-<a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGvq00O20E&#x2F;X8WishX8RdpxZeCXfL_wvQ&#x2F;watch?utm_content=DAGvq00O20E&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">Unlock Your Easiest Path to Real Online Income with CashVib</a> توسط World News
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Easy $100 Daily Income</title>
+  <style>
+    body {
+      font-family: Tahoma, sans-serif;
+      background-color: #f4f4f4;
+      color: #333;
+      padding: 20px;
+      direction: ltr;
+    }
+    .container {
+      max-width: 600px;
+      margin: auto;
+      background: white;
+      padding: 25px;
+      border-radius: 10px;
+      box-shadow: 0 0 8px rgba(0,0,0,0.1);
+    }
+    h1 {
+      color: #2c3e50;
+      text-align: center;
+      margin-bottom: 20px;
+    }
+    p {
+      line-height: 1.6;
+      font-size: 18px;
+      margin: 10px 0;
+    }
+    a {
+      color: #e74c3c;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <h1>Easy $100 Daily Income</h1>
+    <p>Earn up to $100 daily by completing simple tasks and referring others.</p>
+    <p>Just spend a few minutes on the tasks and invite your friends to this amazing opportunity.</p>
+    <p>Our referral system lets you increase your income without any limits.</p>
+    <p>Join thousands of people who have started earning with easy and practical methods.</p>
+    <p>Start today and experience your first income.</p>
+    <p>Register and start earning through the link below:</p>
+    <p style="text-align:center;">
+      <a href="https://B2n.ir/pp6810" target="_blank" rel="noopener noreferrer">Go to the earning site</a>
+    </p>
+  </div>
+</body>
+</html>
